:construction: basic content on

--- a/assets/scss/base/base.scss
+++ b/assets/scss/base/base.scss
@@ -27,6 +27,8 @@ body {
   -webkit-font-feature-settings: "calt" 0;
   font-feature-settings: "calt" 0;
 
+  color: $white;
+
   &.noscroll {
     overflow: hidden;
   }
