--- a/assets/scss/base/fonts.scss
+++ b/assets/scss/base/fonts.scss
@@ -2,14 +2,12 @@
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
 
-/*@font-face {
-    font-family: 'FontName';
-    src: url('../fonts/FontName/FontName.eot');
-    src: url('../fonts/FontName/FontName.woff') format('woff'),
-         url('../fonts/FontName/FontName.ttf') format('truetype');
+@font-face {
+    font-family: 'Courgette';
+    src: url('~/assets/fonts/Courgette-Regular.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-}*/
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Open+Sans&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Open+Sans&display=swap');
 
